
NetDNS2 - PHP DNS Resolver and Updater
======================================

v2.0.6
------
* changed from mt_rand() to random_int(); provides the same value, but faster and produces less complaints from code scanners about
  weak RNG, even though it doesn't actually matter since this isn't used for cryptography.
* realpath() the resolv.conf and private key file path just-in-case; this isn't a real problem.
* changed the resolver cache to use sha256 instead of md5(); againt, this isn't cryptographic, so it doesn't matter, but in my testing
  the sha256 function is surprisingly slightly faster than md5(), and it kills the complaints from code scanners.

v2.0.5
------
* bugfix: fixed #169 - the Client.php was comparing the $qtype value to "AXFR" but should have been using the new ENUM value
* bugfix: fixed #170 - the Socket::read() function could end up in and endless loop when using TCP, and the remote end doesn't
  return any data at all.
* bugfix: fixed #171 - added a missing __isset() magic method to the RR object.

v2.0.4
------
* bugfix: fixed the phpdoc for the $_options passed to the Resolver, Notifier, & Updater constructors; the array format was incorrect.
* bugfix: fixed the blocking logic in Socket::read(); there were a couple reports of failures here that could only happen in a specific 
  case where only one initial byte of data is returned on TCP connections.
* bugfix: fixed #167 - the Mailbox object (used on SOA, RP) RR's didn't support a value without a "." in it (aka an @). While according 
  to RFC1035, this value should be an email address, it seems like DNS servers don't enforce this, so you can add a single value in 
  like "root" and it's accepted.
* bugfix: fixed #168 - the SHA1 DNSSEC Digest algorithm was configured as id 0, but should be 1.

v2.0.3
------
* bugfix: fixed #162; the type() was missing when creating a Data\Mailbox type in RR::__set().