@@ -4,11 +4,15 @@ NetDNS2 - PHP DNS Resolver and Updater
 
 v2.0.6
 ------
+* bugfix: fixed #173 - the Client.php was comparing the $rr->type value to "SOA" but should have been using the new ENUM value. 
 * changed from mt_rand() to random_int(); provides the same value, but faster and produces less complaints from code scanners about
   weak RNG, even though it doesn't actually matter since this isn't used for cryptography.
 * realpath() the resolv.conf and private key file path just-in-case; this isn't a real problem.
-* changed the resolver cache to use sha256 instead of md5(); againt, this isn't cryptographic, so it doesn't matter, but in my testing
+* changed the resolver cache to use sha256 instead of md5(); again, this isn't cryptographic, so it doesn't matter, but in my testing
   the sha256 function is surprisingly slightly faster than md5(), and it kills the complaints from code scanners.
+* dropped the use of curl_close(); it's deprecated as of PHP 8.5.
+* cleaned up the BitMap::arrayToBitMap() function, and created a phpunit test to confirm it's working.
+* changed any isset() cases to use === to avoid "loose comparison" warnings.
 
 v2.0.5
 ------
